--- a/Box-Office-Prediction.ipynb
+++ b/Box-Office-Prediction.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "# Predicting Film Box Office Revenue\n",
     "\n",
-    "This notebook follows Kaggle's Box Office Prediction competition. I will go through some EDA, feature engineering and model development, and explain the thinking behind most of my decisions along the way. To start with, let's first load the data:"
+    "This notebook follows Kaggle's Box Office Prediction competition. The competition's official evaluation metric is the Root-Mean-Squared-Logarithmic-Error (RMSLE). I will go through some EDA, feature engineering and model development, and explain the thinking behind most of my decisions along the way. To start with, let's first load the data:"
    ]
   },
   {
@@ -2540,7 +2540,7 @@
     "\n",
     "def feat_importance(model, df):\n",
     "    return pd.DataFrame({'cols': df.columns, 'importance': model.feature_importance()}\n",
-    "                        ).sort_values('importance', ascending=False)\n",
+    "                        ).sort_values('importance', 6ascending=False)\n",
     "\n",
     "def plot_feat_importance(fi, figsize = (12, 8), xticks = np.arange(0, 100, 5)):\n",
     "    return fi.plot('cols', 'importance', 'barh',\n",
@@ -12393,7 +12393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spoiler alert: stacking models did not lead to an improved test set score in the competition. The best score I got was from the single LGBM model (the first one) and, as of the time of writing, gets me into the top 25% of the competition, without using additional data or external features. FYI, the ridge regression model was only marginally worse, and the LGBM stacked model was third."
+    "Spoiler alert: stacking models did not lead to an improved test set score in the competition. The best score I got was 1.97204 RMSLE from the single LGBM model (the first one) and, as of the time of writing, gets me into the top 25% of the competition, without using additional data or external features. FYI, the ridge regression model was only marginally worse, and the LGBM stacked model was third."
    ]
   },
   {
